Markdownify sidebar inclusion in default layout

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -72,7 +72,7 @@
                 <h3 class="text-xl text-white mb-4">Índice da Biblioteca</h3>
                 
                 <!-- Aqui, incluímos o ficheiro do menu -->
-                {% include sidebar.md %}
+                {% include sidebar.md | markdownify %}
 
             </aside>
         </div>
